# crud_jornada

./: README.md  pyproject.toml
backend/: database.py
